--- a/FileFlux/Properties/launchSettings.json
+++ b/FileFlux/Properties/launchSettings.json
@@ -6,7 +6,7 @@
     },
     "ArgumentsP": {
       "commandName": "Project",
-      "commandLineArgs": "fileflux://test.com/file.txt",
+      "commandLineArgs": "fileflux://https%3A%2F%2Fofficecdn.microsoft.com%2Fdb%2F492350F6-3A01-4F97-B9C0-C7C6DDF67D60%2Fmedia%2Far-SA%2FHomeBusiness2021Retail.img",
       "authenticationMode": "None"
     }
   }
