--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -13,10 +13,10 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Setup .NET Core
-        uses: actions/setup-dotnet@v4
-        with:
-          dotnet-version: '9.x'  # Specify the .NET 9 version
+      - task: UseDotNet@2
+        inputs:
+            packageType: 'sdk'
+            version: '9.0.102'
 
       - name: restore workloads
         run: dotnet workload restore
