--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -16,7 +16,7 @@ jobs:
       - name: setup net
       - uses: actions/setup-dotnet@v4
         with:
-          dotnet-version: '9.1.102'
+          dotnet-version: '9.x.x'
          
       - name: restore workloads
         run: dotnet workload restore
