--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -29,6 +29,9 @@ jobs:
       - name: Build and Pack
         run: dotnet publish -c Release -f net9.0-windows10.0.26100.0 /p:RuntimeIdentifierOverride=win10-x64 /p:GenerateAppxPackageOnBuild=true
 
+      - name: check directory
+        run: dir /S .bin\Release 
+
       - name: Upload build output
         uses: actions/upload-artifact@v4
         with:
