--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -33,7 +33,7 @@ jobs:
       - name: Find Published Artifact
         id: find-artifact
         run: |
-          $path = Get-ChildItem -Path .FileFlux/bin/Release/* -Recurse -Filter "*.msix" | Select-Object -First 1
+          $path = Get-ChildItem -Path FileFlux/bin/Release/* -Recurse -Filter "*.msix" | Select-Object -First 1
           echo "::set-output name=artifact_path::$($path.FullName)"
         shell: pwsh
 
