--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -33,7 +33,8 @@ jobs:
       - name: Determine Version and Tag
         id: determine-version
         run: |
-          $version = (Select-String -Path FileFlux/FileFlux.csproj -Pattern '<Version>(.*?)</Version>').Matches[0].Groups[1].Value
+          [xml]$manifest = Get-Content FileFlux/Platforms/Windows/Package.appmanifest
+          $version = $manifest.Package.Identity          
           $date = (Get-Date).ToString("yyyyMMdd")
           $tag = "v$version-$date"
           echo "tag=$tag" >> $GITHUB_ENV
