--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -67,5 +67,5 @@ jobs:
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
           asset_path: ${{ steps.find-artifact.outputs.artifact_path }}
-          asset_name: $(basename ${{ steps.find-artifact.outputs.artifact_path }})
+          asset_name: $(basename ${{ steps.find-artifact.outputs.artifact_name }})
           asset_content_type: application/octet-stream
