fixed issues with file type icons, new narrower icon, perforrmance improvements when downloading

--- a/FileFlux/FileFlux.csproj
+++ b/FileFlux/FileFlux.csproj
@@ -140,6 +140,9 @@
 		<MauiXaml Update="Pages\DownloadItemTemplate.xaml">
 		  <Generator>MSBuild:Compile</Generator>
 		</MauiXaml>
+		<MauiXaml Update="Pages\FileTypeIcon.xaml">
+		  <Generator>MSBuild:Compile</Generator>
+		</MauiXaml>
 		<MauiXaml Update="Pages\NewDownloadPage.xaml">
 			<Generator>MSBuild:Compile</Generator>
 		</MauiXaml>
